crates/aether-actor-derive/tests/ui/rejects_duplicate_handler_kind_ffi.stderr
error: two #[handler] methods accept the same mail kind `Ping` (also on `on_first`) — each kind routes to exactly one handler. Give each handler a distinct kind.
  --> tests/ui/rejects_duplicate_handler_kind_ffi.rs:41:8
   |
41 |     fn on_second(&mut self, _ctx: &mut aether_actor::FfiCtx<'_>, _ping: Ping) {}
   |        ^^^^^^^^^
